--- a/client/package.json
+++ b/client/package.json
@@ -16,11 +16,13 @@
     "@angular/compiler": "~11.1.0",
     "@angular/core": "~11.1.0",
     "@angular/forms": "~11.1.0",
+    "@angular/localize": "~11.1.0",
     "@angular/platform-browser": "~11.1.0",
     "@angular/platform-browser-dynamic": "~11.1.0",
     "@angular/router": "~11.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "@schematics/angular": "^9.1.0",
-    "bootstrap": "4.1.1",
+    "bootstrap": "^4.1.1",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
